# event-deep-research

./: .env.example  .gitignore  GRAPH_CONSOLIDATION_PROPOSAL.md  Makefile  README.md  REFACTORING_SUGGESTIONS.md  REVISED_GRAPH_CONSOLIDATION_PROPOSAL.md  index.py  langgraph.json  nyfile.py  pyproject.toml  scraper.py  test.py  test_async_fix.py
.github/: repository.yml
legacy/: kronologs_researcher_graph.py  llm_service.py  state.py  utils.py
legacy/url_crawler/: url_krawler_graph.py
new_graph/: index.py  prompts.py  state.py  utils.py
scripts/: events.json  events_with_coords.json  geocode.py
src/: configuration.py  graph.py  index.py  krono_researcher.py  kronologs_researcher_graph.py  llm_service.py  messagesraw.json  notes.md  prod_prompts.py  prompts.py  state.py  utils.py
src/notes/: merge_events_notes.md  notes.md  notes.py  notes_state.md
src/research_events/: chunk_graph.py  research_event_graph.py  research_events_graph.py  result.json  state.py
src/research_events/merge_events/: merge_events_graph.py  prompts.py  shortcategorized.json  test.json  utils.py
src/test/: test_merge_events.py  test_research_events.py  test_url_crawler.py
src/url_crawler/: index.py  prompts.py  url_krawler_graph.py  utils.py
