[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=0.9.9",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.1.9",
    "langgraph>=0.2.0",
    "langgraph-cli",
    "langchain-openai>=0.3.33",
    "langchain-ollama>=0.3.8",
    "langchain-tavily>=0.2.11",
    "tavily-python>=0.7.12",
    "firecrawl>=4.3.6",
    "pandas>=2.3.2",
]
